Prevent logo flicker

--- a/themes/asciinema/static/css/site.css
+++ b/themes/asciinema/static/css/site.css
@@ -20,7 +20,6 @@ body, pre, code {
 }
 
 #header img {
-  height: 2em;
   vertical-align: middle;
   margin-top: 0.5em;
   margin-bottom: 0.67em;
